{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 80,
  "lineage": "af158966-6ed9-cdfb-f83b-43d5d95c6c5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:905207152945:loadbalancer/terraform-example-elb",
            "availability_zones": [
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-example-elb-860416620.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-example-elb",
            "idle_timeout": 60,
            "instances": [
              "i-01b5e11504ff43969",
              "i-06e1eb6c08f3629c9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-example-elb",
            "security_groups": [
              "sg-0e2a257972071a888"
            ],
            "source_security_group": "905207152945/terraform_example_elb",
            "source_security_group_id": "sg-0e2a257972071a888",
            "subnets": [
              "subnet-0b156a7d977819130"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.auth",
            "aws_security_group.default",
            "aws_security_group.elb",
            "aws_subnet.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6be5935e0e03181",
            "arn": "arn:aws:ec2:eu-central-1:905207152945:instance/i-01b5e11504ff43969",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b5e11504ff43969",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paultest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004a940b56675fda2",
            "private_dns": "ip-10-0-1-33.eu-central-1.compute.internal",
            "private_ip": "10.0.1.33",
            "public_ip": "3.125.122.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02988a44358886936",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b156a7d977819130",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe38cc6ba1704e2f"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.default",
            "aws_subnet.default",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d6be5935e0e03181",
            "arn": "arn:aws:ec2:eu-central-1:905207152945:instance/i-06e1eb6c08f3629c9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e1eb6c08f3629c9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paultest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0608b3d5e0c099031",
            "private_dns": "ip-10-0-1-217.eu-central-1.compute.internal",
            "private_ip": "10.0.1.217",
            "public_ip": "35.157.157.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-099a73ee13e784b62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b156a7d977819130",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe38cc6ba1704e2f"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.default",
            "aws_subnet.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905207152945:internet-gateway/igw-00e6b26521a9e6c86",
            "id": "igw-00e6b26521a9e6c86",
            "owner_id": "905207152945",
            "vpc_id": "vpc-03bd40176ee3e24de"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e6b26521a9e6c86",
            "id": "r-rtb-0db0c925b13809ab31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db0c925b13809ab3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905207152945:security-group/sg-0fe38cc6ba1704e2f",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe38cc6ba1704e2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example",
            "name_prefix": null,
            "owner_id": "905207152945",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03bd40176ee3e24de"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905207152945:security-group/sg-0e2a257972071a888",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2a257972071a888",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example_elb",
            "name_prefix": null,
            "owner_id": "905207152945",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03bd40176ee3e24de"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905207152945:subnet/subnet-0b156a7d977819130",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b156a7d977819130",
            "map_public_ip_on_launch": true,
            "owner_id": "905207152945",
            "vpc_id": "vpc-03bd40176ee3e24de"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905207152945:vpc/vpc-03bd40176ee3e24de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0122d9a1e556939c8",
            "default_route_table_id": "rtb-0db0c925b13809ab3",
            "default_security_group_id": "sg-0385a5bf648b257db",
            "dhcp_options_id": "dopt-33ce6a59",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03bd40176ee3e24de",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db0c925b13809ab3",
            "owner_id": "905207152945"
          }
        }
      ]
    }
  ]
}